Load js from CDN. Original script didn't work.   Thanks a lot to Aleksei Gutikov for this fix.

--- a/charts-template.html
+++ b/charts-template.html
@@ -1,8 +1,12 @@
 <html>
     <head>
         <!--[if IE]><script language="javascript" type="text/javascript" src="./excanvas.min.js"></script><![endif]-->
-        <script language="javascript" type="text/javascript" src="./jquery.js"></script>
-        <script language="javascript" type="text/javascript" src="./jquery.flot.js"></script>
+        <script language="javascript" type="text/javascript"
+            src="https://code.jquery.com/jquery-3.4.1.min.js"
+            integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+            crossorigin="anonymous"></script>
+        <script language="javascript" type="text/javascript"
+            src="https://cdnjs.cloudflare.com/ajax/libs/flot/0.8.3/jquery.flot.min.js"></script>
     </head>
     <body>
 
