Plot memose usage graphics in the very beginning, just before execution time of insertion.   Also, add memory use graphics for insert_random_shuffle_range.

--- a/charts-template.html
+++ b/charts-template.html
@@ -140,7 +140,9 @@
     
     function plot_all_charts(redraw_only = false) {
         plot_chart(chart_data['insert_random_shuffle_range_runtime'], '#insert_random_shuffle_range_runtime', '#insert_random_shuffle_range_runtime_choices', runtime_settings, redraw_only);
+        plot_chart(chart_data['insert_random_shuffle_range_memory'], '#insert_random_shuffle_range_memory', '#insert_random_shuffle_range_memory_choices', memory_settings, redraw_only);
         plot_chart(chart_data['read_random_shuffle_range_runtime'], '#read_random_shuffle_range_runtime', '#read_random_shuffle_range_runtime_choices', runtime_settings, redraw_only);
+
         plot_chart(chart_data['insert_random_full_runtime'], '#insert_random_full_runtime', '#insert_random_full_runtime_choices', runtime_settings, redraw_only);
         plot_chart(chart_data['insert_random_full_reserve_runtime'], '#insert_random_full_reserve_runtime', '#insert_random_full_reserve_runtime_choices', runtime_settings, redraw_only);
         plot_chart(chart_data['read_random_full_runtime'], '#read_random_full_runtime', '#read_random_full_runtime_choices', runtime_settings, redraw_only);
@@ -246,20 +248,28 @@
 
 
 
-<h3>Random shuffle inserts: execution time (integers)</h3>
+<h3>Random shuffle inserts: memory footprint and execution time (integers)</h3>
 
 <p>Before the test, we generate a vector with the values [0, nb_entries) and shuffle this vector. 
 Then for each value k in the vector, we insert the key-value pair (k, 1) in the hash map.</p>
+
+<div class="chart" id="insert_random_shuffle_range_memory"></div>
+<div class="xaxis-title">number of entries in hash table</div>
+<ul class="choices" id="insert_random_shuffle_range_memory_choices"></ul>
 
 <div class="chart" id="insert_random_shuffle_range_runtime"></div>
 <div class="xaxis-title">number of entries in hash table</div>
 <ul class="choices" id="insert_random_shuffle_range_runtime_choices"></ul>
 
 
-<h3>Random full inserts: execution time (integers)</h3>
+<h3>Random full inserts: memory footprint and execution time (integers)</h3>
 
 <p>Before the test, we generate a vector of nb_entries size where each value is randomly taken from an uniform random number generator from all possible positive values an int64_t can hold. 
 Then for each value k in the vector, we insert the key-value pair (k, 1) in the hash map.</p>
+
+<div class="chart" id="insert_random_full_memory"></div>
+<div class="xaxis-title">number of entries in hash table</div>
+<ul class="choices" id="insert_random_full_memory_choices"></ul>
 
 <div class="chart" id="insert_random_full_runtime"></div>
 <div class="xaxis-title">number of entries in hash table</div>
@@ -270,6 +280,10 @@ Then for each value k in the vector, we insert the key-value pair (k, 1) in the 
 
 <p>Same as the random full inserts test but the reserve method of the hash map is called beforehand to avoid any rehash during the insertion. 
 It provides a fair comparison even if the growth factor of each hash map is different.</p>
+
+<div class="chart" id="insert_random_full_reserve_memory"></div>
+<div class="xaxis-title">number of entries in hash table</div>
+<ul class="choices" id="insert_random_full_reserve_memory_choices"></ul>
 
 <div class="chart" id="insert_random_full_reserve_runtime"></div>
 <div class="xaxis-title">number of entries in hash table</div>
@@ -339,24 +353,7 @@ We then use the hash map iterators to read all the key-value pairs.</p>
 
 
 
-<h3>Memory usage of random full inserts (integers)</h3>
 
-<p>Before the random full inserts benchmark finishes, we measure the memory that the hash map is using.</p>
-
-<div class="chart" id="insert_random_full_memory"></div>
-<div class="xaxis-title">number of entries in hash table</div>
-<ul class="choices" id="insert_random_full_memory_choices"></ul>
-
-
-<h3>Memory usage of random full inserts with reserve (integers)</h3>
-
-<p>Before the random full inserts with reserve benchmark finishes, we measure the memory that the hash map is using. 
-The benchmark is similar to the one above but without measuring the memory fragmentation that the rehash process
-may cause.</p>
-
-<div class="chart" id="insert_random_full_reserve_memory"></div>
-<div class="xaxis-title">number of entries in hash table</div>
-<ul class="choices" id="insert_random_full_reserve_memory_choices"></ul>
 
 
 
@@ -371,19 +368,27 @@ may cause.</p>
 
 <p>Each string is a random generated string of 15 alphanumeric characters (+1 for the null terminator). A generated key may look like "ju1AOoeWT3LdJxL".<p>
 
-<h3>Inserts: execution time (small strings)</h3>
+<h3>Inserts: memory footprint and execution time (small strings)</h3>
 
 <p>For each entry in the range [0, nb_entries), we generate a string as key and insert it with the value 1.</p>
+
+<div class="chart" id="insert_small_string_memory"></div>
+<div class="xaxis-title">number of entries in hash table</div>
+<ul class="choices" id="insert_small_string_memory_choices"></ul>
 
 <div class="chart" id="insert_small_string_runtime"></div>
 <div class="xaxis-title">number of entries in hash table</div>
 <ul class="choices" id="insert_small_string_runtime_choices"></ul>
 
 
-<h3>Inserts with reserve: execution time (small strings)</h3>
+<h3>Inserts with reserve: memory footprint and execution time (small strings)</h3>
 
 <p>Same as the inserts test but the reserve method of the hash map is called beforehand to avoid any rehash during the insertion. 
 It provides a fair comparison even if the growth factor of each hash map is different.</p>
+
+<div class="chart" id="insert_small_string_reserve_memory"></div>
+<div class="xaxis-title">number of entries in hash table</div>
+<ul class="choices" id="insert_small_string_reserve_memory_choices"></ul>
 
 <div class="chart" id="insert_small_string_reserve_runtime"></div>
 <div class="xaxis-title">number of entries in hash table</div>
@@ -432,25 +437,6 @@ different order which will lead to 50% hits and 50% misses.</p>
 <ul class="choices" id="read_small_string_after_delete_runtime_choices"></ul>
 
 
-<h3>Memory usage of inserts (small strings)</h3>
-
-<p>Before the inserts benchmark finishes, we measure the memory that the hash map is using.</p>
-
-<div class="chart" id="insert_small_string_memory"></div>
-<div class="xaxis-title">number of entries in hash table</div>
-<ul class="choices" id="insert_small_string_memory_choices"></ul>
-
-
-<h3>Memory usage of inserts with reserve (small strings)</h3>
-
-<p>Before the inserts with reserve benchmark finishes, we measure the memory that the hash map is using.
-The benchmark is similar to the one above but without measuring the memory fragmentation that the rehash process
-may cause.</p>
-
-<div class="chart" id="insert_small_string_reserve_memory"></div>
-<div class="xaxis-title">number of entries in hash table</div>
-<ul class="choices" id="insert_small_string_reserve_memory_choices"></ul>
-
 
 
 
@@ -460,9 +446,13 @@ may cause.</p>
 
 <p>Each string is a random generated string of 50 alphanumeric characters (+1 for the null terminator). A generated key may look like "nv46iTRp7ur6UMbdgEkCHpoq7Qx7UU9Ta0u1ETdAvUb4LG6Xu6".<p>
 
-<h3>Inserts: execution time (strings)</h3>
+<h3>Inserts: memory footprint and execution time (strings)</h3>
 
 <p>For each entry in the range [0, nb_entries), we generate a string as key and insert it with the value 1.</p>
+
+<div class="chart" id="insert_string_memory"></div>
+<div class="xaxis-title">number of entries in hash table</div>
+<ul class="choices" id="insert_string_memory_choices"></ul>
 
 <div class="chart" id="insert_string_runtime"></div>
 <div class="xaxis-title">number of entries in hash table</div>
@@ -473,6 +463,10 @@ may cause.</p>
 
 <p>Same as the inserts test but the reserve method of the hash map is called beforehand to avoid any rehash during the insertion. 
 It provides a fair comparison even if the growth factor of each hash map is different.</p>
+
+<div class="chart" id="insert_string_reserve_memory"></div>
+<div class="xaxis-title">number of entries in hash table</div>
+<ul class="choices" id="insert_string_reserve_memory_choices"></ul>
 
 <div class="chart" id="insert_string_reserve_runtime"></div>
 <div class="xaxis-title">number of entries in hash table</div>
@@ -520,24 +514,7 @@ We then try to read all the original values in a different order which will lead
 <ul class="choices" id="read_string_after_delete_runtime_choices"></ul>
 
 
-<h3>Memory usage of inserts (strings)</h3>
 
-<p>Before the inserts benchmark finishes, we measure the memory that the hash map is using.</p>
-
-<div class="chart" id="insert_string_memory"></div>
-<div class="xaxis-title">number of entries in hash table</div>
-<ul class="choices" id="insert_string_memory_choices"></ul>
-
-
-<h3>Memory usage of inserts with reserve (strings)</h3>
-
-<p>Before the inserts with reserve benchmark finishes, we measure the memory that the hash map is using.
-The benchmark is similar to the one above but without measuring the memory fragmentation that the rehash process
-may cause.</p>
-
-<div class="chart" id="insert_string_reserve_memory"></div>
-<div class="xaxis-title">number of entries in hash table</div>
-<ul class="choices" id="insert_string_reserve_memory_choices"></ul>
 
 </div>
 
