make_html.py: do not generate empty charts and sections (integers, small string and strings).   As a result the following commands generates chart only for strings.
     ./bench.py string
     ./make_chart_data.py < output | ./make_html.py

--- a/charts-template.html
+++ b/charts-template.html
@@ -310,12 +310,15 @@
   cost</b>. As you can see this combines both memory footprint and
   performance and, in my opinion, shows us overall efficiency of
   algorithm.</p>
+<!-- REAL_BEGIN_INTEGERS -->
 <h2>Integers</h2>
 
 <p>For the integers tests, we use hash maps with int64_t as key and int64_t as value.</p>
 
 
+<!-- BEGIN_INTEGERS -->
 
+<!-- BEGIN_INSERT_RANDOM_SHUFFLE_RANGE -->
 <h3>Random shuffle inserts: memory footprint and execution time (integers)</h3>
 
 <p>Before the test, we generate a vector with the values [0, nb_entries) and shuffle this vector. 
@@ -332,8 +335,10 @@ Then for each value k in the vector, we insert the key-value pair (k, 1) in the 
 <div class="chart" id="insert_random_shuffle_range_bopsnsec"></div>
 <div class="xaxis-title">number of entries in hash table</div>
 <ul class="choices" id="insert_random_shuffle_range_bopsnsec_choices"></ul>
+<!-- END_INSERT_RANDOM_SHUFFLE_RANGE -->
 
 
+<!-- BEGIN_READ_RANDOM_SHUFFLE_RANGE -->
 <h3>Random shuffle reads: execution time (integers)</h3>
 
 <p>Before the test, we insert nb_entries elements in the same way as in the random shuffle inserts test. 
@@ -346,8 +351,10 @@ We then read each key-value pair in a different and random order than the one th
 <div class="chart" id="read_random_shuffle_range_bopsnsec"></div>
 <div class="xaxis-title">number of entries in hash table</div>
 <ul class="choices" id="read_random_shuffle_range_bopsnsec_choices"></ul>
+<!-- END_READ_RANDOM_SHUFFLE_RANGE -->
 
 
+<!-- BEGIN_INSERT_RANDOM_FULL -->
 <h3>Random full inserts: memory footprint and execution time (integers)</h3>
 
 <p>Before the test, we generate a vector of nb_entries size where each value is randomly taken from an uniform random number generator from all possible positive values an int64_t can hold. 
@@ -364,8 +371,10 @@ Then for each value k in the vector, we insert the key-value pair (k, 1) in the 
 <div class="chart" id="insert_random_full_bopsnsec"></div>
 <div class="xaxis-title">number of entries in hash table</div>
 <ul class="choices" id="insert_random_full_bopsnsec_choices"></ul>
+<!-- END_INSERT_RANDOM_FULL -->
 
 
+<!-- BEGIN_INSERT_RANDOM_F_RESERVE -->
 <h3>Random full inserts with reserve: execution time (integers)</h3>
 
 <p>Same as the random full inserts test but the reserve method of the hash map is called beforehand to avoid any rehash during the insertion. 
@@ -382,8 +391,9 @@ It provides a fair comparison even if the growth factor of each hash map is diff
 <div class="chart" id="insert_random_full_reserve_bopsnsec"></div>
 <div class="xaxis-title">number of entries in hash table</div>
 <ul class="choices" id="insert_random_full_reserve_bopsnsec_choices"></ul>
+<!-- END_INSERT_RANDOM_F_RESERVE -->
 
-
+<!-- BEGIN_READ_RANDOM_FULL -->
 <h3>Random full reads: execution time (integers)</h3>
 
 <p>Before the test, we insert nb_entries elements in the same way as in the random full inserts test. 
@@ -396,7 +406,9 @@ We then read each key-value pair in a different and random order than the one th
 <div class="chart" id="read_random_full_bopsnsec"></div>
 <div class="xaxis-title">number of entries in hash table</div>
 <ul class="choices" id="read_random_full_bopsnsec_choices"></ul>
+<!-- END_READ_RANDOM_FULL -->
 
+<!-- BEGIN_READ_MISS_RANDOM_FULL -->
 <h3>Random full reads misses: execution time (integers)</h3>
 
 <p>Before the test, we insert nb_entries elements in the same way as in the random full inserts test. 
@@ -410,7 +422,9 @@ we try to search for these unknown elements in the hash map.</p>
 <div class="chart" id="read_miss_random_full_bopsnsec"></div>
 <div class="xaxis-title">number of entries in hash table</div>
 <ul class="choices" id="read_miss_random_full_bopsnsec_choices"></ul>
+<!-- END_READ_MISS_RANDOM_FULL -->
 
+<!-- BEGIN_DELETE_RANDOM_FULL -->
 <h3>Random full deletes: execution time (integers)</h3>
 
 <p>Before the test, we insert nb_entries elements in the same way as in the random full insert test. 
@@ -423,7 +437,9 @@ We then delete each key one by one in a different and random order than the one 
 <div class="chart" id="delete_random_full_bopsnsec"></div>
 <div class="xaxis-title">number of entries in hash table</div>
 <ul class="choices" id="delete_random_full_bopsnsec_choices"></ul>
+<!-- END_DELETE_RANDOM_FULL -->
 
+<!-- BEGIN_READ_RANDOM_F_AFTER_DELETE -->
 <h3>Random full reads after deleting half: execution time (integers)</h3>
 
 <p>Before the test, we insert nb_entries elements in the same way as in the random full inserts test 
@@ -437,8 +453,9 @@ different order which will lead to 50% hits and 50% misses.</p>
 <div class="chart" id="read_random_full_after_delete_bopsnsec"></div>
 <div class="xaxis-title">number of entries in hash table</div>
 <ul class="choices" id="read_random_full_after_delete_bopsnsec_choices"></ul>
+<!-- END_READ_RANDOM_F_AFTER_DELETE -->
 
-
+<!-- BEGIN_ITERATION_RANDOM_FULL -->
 <h3>Random full iteration: execution time (integers)</h3>
 
 <p>Before the test, we insert nb_entries elements in the same way as in the random full inserts test. 
@@ -451,6 +468,9 @@ We then use the hash map iterators to read all the key-value pairs.</p>
 <div class="chart" id="iteration_random_full_bopsnsec"></div>
 <div class="xaxis-title">number of entries in hash table</div>
 <ul class="choices" id="iteration_random_full_bopsnsec_choices"></ul>
+<!-- END_ITERATION_RANDOM_FULL -->
+
+<!-- END_INTEGERS -->
 
 
 
@@ -461,14 +481,15 @@ We then use the hash map iterators to read all the key-value pairs.</p>
 
 
 
-
-
-
+<!-- REAL_BEGIN_SMALL_STRINGS -->
 <h2>Small strings</h2>
 <p>For the small string tests, we use hash maps with std::string as key and int64_t as value.</p>
 
 <p>Each string is a random generated string of 15 alphanumeric characters (+1 for the null terminator). A generated key may look like "ju1AOoeWT3LdJxL".<p>
 
+<!-- BEGIN_SMALL_STRINGS -->
+
+<!-- BEGIN_INSERT_SMALL_STRING -->
 <h3>Inserts: memory footprint and execution time (small strings)</h3>
 
 <p>For each entry in the range [0, nb_entries), we generate a string as key and insert it with the value 1.</p>
@@ -484,8 +505,10 @@ We then use the hash map iterators to read all the key-value pairs.</p>
 <div class="chart" id="insert_small_string_bopsnsec"></div>
 <div class="xaxis-title">number of entries in hash table</div>
 <ul class="choices" id="insert_small_string_bopsnsec_choices"></ul>
+<!-- END_INSERT_SMALL_STRING -->
 
 
+<!-- BEGIN_RESERVE_SMALL_STRING -->
 <h3>Inserts with reserve: memory footprint and execution time (small strings)</h3>
 
 <p>Same as the inserts test but the reserve method of the hash map is called beforehand to avoid any rehash during the insertion. 
@@ -502,8 +525,10 @@ It provides a fair comparison even if the growth factor of each hash map is diff
 <div class="chart" id="insert_small_string_reserve_bopsnsec"></div>
 <div class="xaxis-title">number of entries in hash table</div>
 <ul class="choices" id="insert_small_string_reserve_bopsnsec_choices"></ul>
+<!-- END_RESERVE_SMALL_STRING -->
 
 
+<!-- BEGIN_READ_SMALL_STRING -->
 <h3>Reads: execution time (small strings)</h3>
 
 <p>Before the test, we insert nb_entries elements in the hash map as in the inserts test. 
@@ -516,8 +541,10 @@ We then read each key-value pair in a different and random order than the one th
 <div class="chart" id="read_small_string_bopsnsec"></div>
 <div class="xaxis-title">number of entries in hash table</div>
 <ul class="choices" id="read_small_string_bopsnsec_choices"></ul>
+<!-- END_READ_SMALL_STRING -->
 
 
+<!-- BEGIN_READ_MISS_SMALL_STRING -->
 <h3>Reads misses: execution time (small strings)</h3>
 
 <p>Before the test, we insert nb_entries elements in the same way as in the inserts test. 
@@ -531,8 +558,10 @@ we try to search for these unknown elements in the hash map.</p>
 <div class="chart" id="read_miss_small_string_bopsnsec"></div>
 <div class="xaxis-title">number of entries in hash table</div>
 <ul class="choices" id="read_miss_small_string_bopsnsec_choices"></ul>
+<!-- END_READ_MISS_SMALL_STRING -->
 
 
+<!-- BEGIN_DELETE_SMALL_STRING -->
 <h3>Deletes: execution time (small strings)</h3>
 
 <p>Before the test, we insert nb_entries elements in the hash map as in the inserts test. 
@@ -545,7 +574,9 @@ We then delete each key one by one in a different and random order than the one 
 <div class="chart" id="delete_small_string_bopsnsec"></div>
 <div class="xaxis-title">number of entries in hash table</div>
 <ul class="choices" id="delete_small_string_bopsnsec_choices"></ul>
+<!-- END_DELETE_SMALL_STRING -->
 
+<!-- BEGIN_READ_AFTER_DEL_SMALL_STRING -->
 <h3>Reads after deleting half: execution time (small strings)</h3>
 
 <p>Before the test, we insert nb_entries elements in the same way as in the inserts test before 
@@ -559,17 +590,22 @@ different order which will lead to 50% hits and 50% misses.</p>
 <div class="chart" id="read_small_string_after_delete_bopsnsec"></div>
 <div class="xaxis-title">number of entries in hash table</div>
 <ul class="choices" id="read_small_string_after_delete_bopsnsec_choices"></ul>
+<!-- END_READ_AFTER_DEL_SMALL_STRING -->
+
+<!-- END_SMALL_STRINGS -->
 
 
 
-
-
+<!-- REAL_BEGIN_STRINGS -->
 
 <h2>Strings</h2>
 <p>For the string tests, we use hash maps with std::string as key and int64_t as value.</p>
 
 <p>Each string is a random generated string of 50 alphanumeric characters (+1 for the null terminator). A generated key may look like "nv46iTRp7ur6UMbdgEkCHpoq7Qx7UU9Ta0u1ETdAvUb4LG6Xu6".<p>
 
+<!-- BEGIN_STRINGS -->
+
+<!-- BEGIN_INSERT_STRING -->
 <h3>Inserts: memory footprint and execution time (strings)</h3>
 
 <p>For each entry in the range [0, nb_entries), we generate a string as key and insert it with the value 1.</p>
@@ -585,8 +621,10 @@ different order which will lead to 50% hits and 50% misses.</p>
 <div class="chart" id="insert_string_bopsnsec"></div>
 <div class="xaxis-title">number of entries in hash table</div>
 <ul class="choices" id="insert_string_bopsnsec_choices"></ul>
+<!-- END_INSERT_STRING -->
 
 
+<!-- BEGIN_RESERVE_STRING -->
 <h3>Inserts with reserve: execution time (strings)</h3>
 
 <p>Same as the inserts test but the reserve method of the hash map is called beforehand to avoid any rehash during the insertion. 
@@ -603,8 +641,10 @@ It provides a fair comparison even if the growth factor of each hash map is diff
 <div class="chart" id="insert_string_reserve_bopsnsec"></div>
 <div class="xaxis-title">number of entries in hash table</div>
 <ul class="choices" id="insert_string_reserve_bopsnsec_choices"></ul>
+<!-- END_RESERVE_STRING -->
 
 
+<!-- BEGIN_READ_STRING -->
 <h3>Reads: execution time (strings)</h3>
 
 <p>Before the test, we insert nb_entries elements in the hash map as in the inserts test. 
@@ -617,8 +657,9 @@ We then read each key-value pair in a different and random order than the one th
 <div class="chart" id="read_string_bopsnsec"></div>
 <div class="xaxis-title">number of entries in hash table</div>
 <ul class="choices" id="read_string_bopsnsec_choices"></ul>
+<!-- END_READ_STRING -->
 
-
+<!-- BEGIN_READ_MISS_STRING -->
 <h3>Reads misses: execution time (strings)</h3>
 
 <p>Before the test, we insert nb_entries elements in the same way as in the inserts test. 
@@ -632,8 +673,10 @@ we try to search for these unknown elements in the hash map.</p>
 <div class="chart" id="read_miss_string_bopsnsec"></div>
 <div class="xaxis-title">number of entries in hash table</div>
 <ul class="choices" id="read_miss_string_bopsnsec_choices"></ul>
+<!-- END_READ_MISS_STRING -->
 
 
+<!-- BEGIN_DELETE_STRING -->
 <h3>Deletes: execution time (strings)</h3>
 
 <p>Before the test, we insert nb_entries elements in the hash map as in the inserts test. 
@@ -646,8 +689,9 @@ We then delete each key one by one in a different and random order than the one 
 <div class="chart" id="delete_string_bopsnsec"></div>
 <div class="xaxis-title">number of entries in hash table</div>
 <ul class="choices" id="delete_string_bopsnsec_choices"></ul>
+<!-- END_DELETE_STRING -->
 
-
+<!-- BEGIN_READ_AFTER_DEL_STRING -->
 <h3>Reads after deleting half: execution time (strings)</h3>
 
 <p>Before the test, we insert nb_entries elements in the same way as in the inserts test before deleting half of these values randomly. 
@@ -660,8 +704,9 @@ We then try to read all the original values in a different order which will lead
 <div class="chart" id="read_string_after_delete_bopsnsec"></div>
 <div class="xaxis-title">number of entries in hash table</div>
 <ul class="choices" id="read_string_after_delete_bopsnsec_choices"></ul>
+<!-- END_READ_AFTER_DEL_STRING -->
 
-
+<!-- END_STRINGS -->
 
 
 </div>
