--- a/charts-template.html
+++ b/charts-template.html
@@ -36,7 +36,7 @@
                                return parseInt(num/1000) + 'k'; 
                            }
         },
-        //transform: function(v) { return Math.log(v+0.000001)/Math.log(1.1); }
+        transform: function(v) { return Math.log(v+0.000001)/Math.log(11); }
     };
 
     yaxis_runtime_settings = {
