small_string: use strings with 10-20 characters instead of constant size 15; string: 20-100 characters

--- a/charts-template.html
+++ b/charts-template.html
@@ -533,7 +533,7 @@ We then use the hash map iterators to read all the key-value pairs.</p>
 <h2>Small strings</h2>
 <p>For the small string tests, we use hash maps with std::string as key and int64_t as value.</p>
 
-<p>Each string is a random generated string of 15 alphanumeric characters (+1 for the null terminator). A generated key may look like "ju1AOoeWT3LdJxL".<p>
+<p>Each string is a random generated string of 10-20 alphanumeric characters (+1 for the null terminator). A generated key may look like "ju1AOoeWT3LdJxL".<p>
 
 <!-- BEGIN_SMALL_STRINGS -->
 
@@ -666,7 +666,7 @@ different order which will lead to 50% hits and 50% misses.</p>
 <h2>Strings</h2>
 <p>For the string tests, we use hash maps with std::string as key and int64_t as value.</p>
 
-<p>Each string is a random generated string of 50 alphanumeric characters (+1 for the null terminator). A generated key may look like "nv46iTRp7ur6UMbdgEkCHpoq7Qx7UU9Ta0u1ETdAvUb4LG6Xu6".<p>
+<p>Each string is a random generated string of 20-100 alphanumeric characters (+1 for the null terminator). A generated key may look like "nv46iTRp7ur6UMbdgEkCHpoq7Qx7UU9Ta0u1ETdAvUb4LG6Xu6".<p>
 
 <!-- BEGIN_STRINGS -->
 
